Changes for Filter Effects specification
----------------------------------------
2012-11-16  Dirk Schulze  <dschulze@adobe.com>
- Editorial changes to custom-filter at-rule.

2012-11-16  Dirk Schulze  <dschulze@adobe.com>
- First draft of the new custom-filter at-rule.

2012-11-08  Dirk Schulze  <dschulze@adobe.com>
- Add test suite information on spec.

2012-11-08  Dirk Schulze  <dschulze@adobe.com>
- Update normative and informative references.

2012-11-08  Dirk Schulze  <dschulze@adobe.com>
- Remove issue to hit testing. Filters won't effect hit testing, since it could lead to security issues.

2012-11-08  Dirk Schulze  <dschulze@adobe.com>
- Calrify that filters are applied in the element's local coordinate system.

2012-11-08  Dirk Schulze  <dschulze@adobe.com>
- Calrify that filter operations effect all portions of element drawing, including scroll bars.

2012-11-08  Dirk Schulze  <dschulze@adobe.com>
- Add new sections for module interactions.

2012-11-07  Dirk Schulze  <dschulze@adobe.com>
- Use 'fill' and 'stroke' property for FillPaint and StrokePaint on HTML elements.

2012-11-06  Dirk Schulze  <dschulze@adobe.com>
- Add interface defintion for feDropShadow.

2012-11-06  Dirk Schulze  <dschulze@adobe.com>
- Cleanup interface code and auto generate links.
- Remove ImageData interface and link to context2d (WD).

2012-11-05  Dirk Schulze  <dschulze@adobe.com>
- Start porting interface to WebIDL and SVG2.

2012-11-05  Dirk Schulze  <dschulze@adobe.com>
- Add 'feCustomParam' to add multiple parameters of different types.

2012-10-25  Dirk Schulze  <dschulze@adobe.com>
- Removed reference to RelaxNG. We use WebIDL for the interfaces. No validation code.
- Remove note about naming 'cudtom()', 'shader()'
- Remve feUnsharpen for now. Opened bug report if we want to have it later.
- Removed unspecified short hand functions. Opened bug report.
- Removed issue about new code for feTurbulence. We won't change the code in Filter Effects.