@@ -1,6 +1,9 @@
 Changes for Filter Effects specification
 ----------------------------------------
 2012-11-16  Dirk Schulze  <dschulze@adobe.com>
+- Start outlinging how margin for custom-filters will look like.
+
+2012-11-16  Dirk Schulze  <dschulze@adobe.com>
 - Editorial changes to custom-filter at-rule.
 
 2012-11-16  Dirk Schulze  <dschulze@adobe.com>
